--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,27 @@
 name: yunos_adventures
-description: A new Flutter project.
-
+description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  flame: ^1.6.0
+
+  cupertino_icons: ^1.0.6
+  flame: ^1.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+
+  flutter_lints: ^3.0.0
 
 flutter:
+
   uses-material-design: true
   assets:
     - assets/images/
