updating with lesson 4 and lesson 5

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,3 +26,4 @@ flutter:
   assets:
     - assets/images/
 # "Sunset Temple Tiles" by Pyromantic is licensed under CC BY 3.0
+# Rest of the images by Bevouliin is licensed under CC0
